@@ -8,6 +8,11 @@ Latest changes
 Features added
 --------------
 
+* ``xmlfile(buffered=False)`` disables output buffering and flushes the
+  content after each API operation (starting/ending element blocks or writes).
+  A new method ``xf.flush()`` can alternatively be used to explicitly flush
+  the output.
+
 * ``lxml.html.document_fromstring`` now accepts an ``ensure_head_body`` option.
   If true, the resulting document will be given an empty head if it didn't
   have one originally and an empty body if it didn't have one originally.
